--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,20 @@ aux_links:
 
 # Color scheme supports "light" (default) and "dark"
 color_scheme: dark
+
+callouts_level: quiet # or loud
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
